# s-rmm-benchmark

./: .gitignore  .huggingfaceignore  Dockerfile  FINAL_PRE_SUBMISSION_CHECK.py  README.md  __init__.py  client.py  deploy_hf.py  dump_out.txt  dump_out_utf8.txt  dumppush.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  s_rmm_logic.py  test_score_range.py  verify_full_project.py
server/: __init__.py  app.py
