[project]
name = "s-rmm-benchmark"
version = "1.0.0"
description = "S-RMM Benchmark for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core==0.2.3",
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "pydantic==2.11.7",
    "openai==2.7.2"
]

[project.scripts]
server = "main:main"
